[package]
name = "tenxiv"
version = "0.1.0"
authors = ["reiyw <reiyw.setuve@gmail.com>"]

[dependencies]
rocket = "0.3.11"
rocket_codegen = "0.3.11"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
url = "1.7"
reqwest = "0.8.5"
hyper = "0.11"
scraper = "0.6"
chrono = "0.4"
lazy_static = "1.0"
quick-xml = "0.10.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
